#KT-491 -UX - Implementera progress bar: Fixed new images and let them scale on mobile devices.

--- a/Tolk.Web/wwwroot/css/site.less
+++ b/Tolk.Web/wwwroot/css/site.less
@@ -783,6 +783,7 @@ ul.pagination > li.paginate_button.active > a {
 .progressbar {
     margin-top: 35px;
     margin-bottom: 30px;
+    max-width: 100%;
 }
 
 .requirement-checkbox {
